force-app/main/default/objects/animalos__Log__c/animalos__Log__c.object-meta.xml
<CustomObject>
    <label>AnimalOS Log</label>
    <nameField>
        <displayFormat>AL{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AnimalOS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>