force-app/main/default/objects/animalos__Log__c/fields/animalos__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>