force-app/main/default/objects/animalos__Log__c/fields/animalos__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>