force-app/main/default/objects/animalos__Log__c/fields/animalos__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__Line_Number__c</fullName>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>