force-app/main/default/objects/animalos__Log__c/fields/animalos__Log_Details__c.field-meta.xml
<CustomField>
    <fullName>animalos__Log_Details__c</fullName>
    <label>Log Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>