force-app/main/default/objects/animalos__Log__c/fields/animalos__Message_Body__c.field-meta.xml
<CustomField>
    <fullName>animalos__Message_Body__c</fullName>
    <label>Message Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>