force-app/main/default/objects/animalos__Log__c/fields/animalos__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>