force-app/main/default/objects/animalos__Log__c/fields/animalos__Payload__c.field-meta.xml
<CustomField>
    <fullName>animalos__Payload__c</fullName>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>