force-app/main/default/objects/animalos__Log__c/fields/animalos__Process__c.field-meta.xml
<CustomField>
    <fullName>animalos__Process__c</fullName>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>