force-app/main/default/objects/animalos__Log__c/fields/animalos__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>animalos__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>