force-app/main/default/objects/animalos__Log__c/fields/animalos__Trigger_Context__c.field-meta.xml
<CustomField>
    <fullName>animalos__Trigger_Context__c</fullName>
    <label>Trigger Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before insert</fullName>
            </value>
            <value>
                <fullName>after insert</fullName>
            </value>
            <value>
                <fullName>before update</fullName>
            </value>
            <value>
                <fullName>after update</fullName>
            </value>
            <value>
                <fullName>before delete</fullName>
            </value>
            <value>
                <fullName>after delete</fullName>
            </value>
            <value>
                <fullName>after undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>