force-app/main/default/objects/animalos__Log__c/fields/animalos__User_Context__c.field-meta.xml
<CustomField>
    <fullName>animalos__User_Context__c</fullName>
    <label>User Context</label>
    <length>18</length>
    <type>Text</type>
</CustomField>