force-app/main/default/objects/animalos__Log__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Payload__c</columns>
    <columns>animalos__Process__c</columns>
    <columns>animalos__Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>